--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
 		<jaxb.version>2.3.0</jaxb.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<sonar.projectKey>fykidwai_mssc-beer-service</sonar.projectKey>
+		<sonar.organization>fykidwai</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
