--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<sonar.organization>fykidwai</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<mapstruct.version>1.4.1.Final</mapstruct.version>
+		<org.springdoc.version>1.4.8</org.springdoc.version>
 	</properties>
 
 	<dependencies>
@@ -73,7 +74,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.4.8</version>
+			<version>${org.springdoc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
