--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 server:
   port: 9090
 spring:  datasource:    initialization-mode: embedded
+sfg: 
+  brewery: 
+    beer-inventory-service-host: http://localhost:9092
