--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,13 @@
+# Java Maven CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2.1
-
 jobs:
     build:
         docker:
             # specify the version you desire here
-            - image: circleci/openjdk:11-browsers-legacy
+            - image: 'circleci/openjdk:11-jdk'
 
             # Specify service dependencies here if necessary
             # CircleCI maintains a library of pre-built images
@@ -36,3 +39,16 @@ jobs:
 
             # run tests!
             - run: mvn integration-test
+            - run:
+                name: Analyze on SonarCloud
+                command: |
+                    if [[ -z ${CIRCLE_PULL_REQUEST} ]]; then \
+                        mvn verify sonar:sonar; \
+                    else \
+                        mvn verify sonar:sonar -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST##*/} -Dsonar.pullrequest.branch=${CIRCLE_BRANCH}; \
+                    fi
+workflows:
+    main:
+        jobs:
+            - build:
+                context: SonarCloud
