--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,6 @@ server:
 spring:  datasource:
     initialization-mode: embedded
     url: jdbc:h2:mem:testdb;MODE=MYSQL
-  cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: true
-sfg: 
+  cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: truesfg: 
   brewery: 
     beer-inventory-service-host: http://localhost:9092
-    
