--- a/src/main/resources/application-localmysql.yml
+++ b/src/main/resources/application-localmysql.yml
@@ -3,4 +3,5 @@ spring:
     username: beer_service    password: password
     url: jdbc:mysql://192.168.99.101:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC  jpa:    database: mysql
     hibernate:      ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    properties:      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
