--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 9090
-spring:  datasource:
+spring:
+# defaults for docker image - vromero/activemq-artemis
+  artemis:
+    host: 192.168.99.101
+    user: artemis
+    password: simetraehcapa  datasource:
     initialization-mode: embedded
     url: jdbc:h2:mem:testdb;MODE=MYSQL
   cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: truesfg: 
