fixing Jackson configuration - closes #34

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 9090
+# setting logging level to debug
+logging:
+  level:
+    guru: debug
 spring:
 # defaults for docker image - vromero/activemq-artemis
   artemis:
