adding client. closes #38

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ logging:
   level:
     guru: debug
 spring:
+  application:    name: beer-service
 # defaults for docker image - vromero/activemq-artemis
   artemis:
     host: 192.168.99.101
