Adding spring cloud config client (with legacy bootstrap support). closes #41

--- a/src/main/resources/application-localmysql.yml
+++ b/src/main/resources/application-localmysql.yml
@@ -18,7 +18,10 @@ spring:
     hibernate:      ddl-auto: update
     properties:      hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-
+  cloud:
+    config:
+      discovery:
+        enabled: false
 # Enable logging for config troubleshooting
 #logging:
 #  level:
