--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,6 @@ spring:
     password: simetraehcapa  datasource:
     initialization-mode: embedded
     url: jdbc:h2:mem:testdb;MODE=MYSQL
-  cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: truesfg: 
+  cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: true  zipkin:    base-url: http://192.168.99.101:9411sfg: 
   brewery: 
     beer-inventory-service-host: http://localhost:9092
