adding config for http basic with RESTTemplate - closes #48

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,5 @@ spring:
   cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: true  zipkin:    enabled: falsesfg: 
   brewery: 
     beer-inventory-service-host: http://localhost:9092
+    inventory-user: good
+    inventory-password: beer
