Changed Docker IP to localhost

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   application:    name: beer-service
 # defaults for docker image - vromero/activemq-artemis
   artemis:
-    host: 192.168.99.101
+    #host: localhost
     user: artemis
     password: simetraehcapa  datasource:
     initialization-mode: embedded
