--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.fykidwai</groupId>
@@ -15,8 +15,9 @@
     <url>https://github.com/fykidwai/mssc-beer-service</url>
     <scm>
         <url>https://github.com/fykidwai/mssc-beer-service</url>
-        <connection>scm:git:git://github.com/fykidwai/mssc-beer-service.git</connection>
-        <developerConnection>scm:git:git@github.com:fykidwai/mssc-beer-service.git</developerConnection>
+        <connection>scm:git:https://github.com/fykidwai/mssc-beer-service.git</connection>
+        <developerConnection>scm:git:https://fykidwai@github.com/fykidwai/mssc-beer-service.git</developerConnection>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <url>https://github.com/fykidwai/mssc-beer-service/issues</url>
