--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <version>1.13</version>
     </parent>
     <artifactId>mssc-beer-service</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>mssc-beer-service</name>
     <description>MSSC Beer Service</description>
     <url>https://github.com/fykidwai/mssc-beer-service</url>
@@ -15,7 +15,7 @@
         <url>https://github.com/fykidwai/mssc-beer-service</url>
         <connection>scm:git:https://github.com/fykidwai/mssc-beer-service.git</connection>
         <developerConnection>scm:git:https://fykidwai@github.com/fykidwai/mssc-beer-service.git</developerConnection>
-        <tag>v0.0.3</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <url>https://github.com/fykidwai/mssc-beer-service/issues</url>
