--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,16 +5,30 @@ logging:
   level:
     guru: debug
 spring:
-  application:    name: beer-service
-# defaults for docker image - vromero/activemq-artemis
+  application:
+    name: beer-service
+  # defaults for docker image - vromero/activemq-artemis
   artemis:
     #host: localhost
     user: artemis
-    password: simetraehcapa  datasource:
-    initialization-mode: embedded
+    password: simetraehcapa
+  datasource:
+    #    initialization-mode: embedded
     url: jdbc:h2:mem:testdb;MODE=MYSQL
-  cache:    jcache:      config: classpath:ehcache.xml  h2:    console:      enabled: true  zipkin:    enabled: falsesfg: 
-  brewery: 
+  cache:
+    jcache:
+      config: classpath:ehcache.xml
+  h2:
+    console:
+      enabled: true
+  zipkin:
+    enabled: false
+  # added for Spring boot 2.5
+  sql:
+    init:
+      enabled: false
+sfg:
+  brewery:
     beer-inventory-service-host: http://localhost:9092
     inventory-user: good
     inventory-password: bear
